openjdk23/jdk/test/langtools/tools/javac/annotations/pos/ClassB.java
/*
 * StarshipOS Copyright (c) 2004-2025. R.A. James
 */

class ClassB implements ClassA {
    public Class f() { return null; }
    public Class<ClassA> annotationType() { return ClassA.class; }
}
