openjdk23/jdk/test/langtools/tools/javac/annotations/neg/NoObjectMethods.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

public @interface NoObjectMethods {
    int clone();
}
